--- a/style.css
+++ b/style.css
@@ -1,10 +1,114 @@
 body{
     margin: 0;
     padding: 0;
-
+    background-color: salmon;
+    font-family: 'Courier New', Courier, monospace;
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
 }
 
 img{
     width: 70px;
-    
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 60px;
+    z-index: 2;
 }
+
+
+.clock{
+    position: relative;
+    border-radius: 50%;
+    width: 350px;
+    height: 350px;
+    background-color: lightgray;
+    border: 5px solid darkgray;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, .3);
+}
+
+
+.numbers div{
+    position: absolute;
+    font-size: 27px;
+    font-weight: bold;
+    color: lightgoldenrodyellow;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, .7);
+}
+
+
+.twelve{
+    top: 6px;
+    left: 50%;
+    transform: translate(-50%);
+}
+
+
+.three{
+    right: 6px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.six{
+    bottom: 6px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.nine{
+    left: 6px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+
+.arrows{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+
+}
+
+
+.arrows::before{
+    content: "";
+    width: 25px;
+    height: 25px;
+    background-color: green;
+    border-radius: 50%;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, .7);
+    z-index: 4;
+}
+
+
+.arrows div{
+    background-color: white;
+    width: 7px;
+    position: absolute;
+    height: 120px;
+    transform-origin: bottom center; /*Bu özellik, CSS’te dönüşüm işlemlerinin (rotate, scale, skew, vs.) nereden başlayacağını belirler. transform-origin: [yatay konum] [dikey konum];*/
+    bottom: 50%;
+    z-index: 3;
+    border-radius: 50% 50% 0 0;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, .3);
+}
+
+
+.arrows .hours{
+    height: 80px;
+    transform: rotate(30deg);
+}
+
+.arrows .second{
+    transform: rotate(250deg);
+    background-color: goldenrod;
+    border-radius: 0% 200%;
+    height: 150px;
+    width: 2px;
+}
+
